# thothspinner

./: .editorconfig-checker.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Custom Rich Progress Bar Guide.md  I01.md  I02.md  I03.md  I04.md  I05.md  I06.md  I07.md  LICENSE  M01.md  M02.md  M03.md  M04.md  M05.md  M06.md  M07.md  M08.md  M09.md  M10.md  M11.md  M12.md  M13.md  M14.md  M15.md  MILESTONES.md  Makefile  PROJECTS.md  PUBLISH.md  README.md  RELEASE.md  RICH_AUDIT.md  SECURITY.md  cliff.toml  config.md  demo.tape  example_progress.py  (+6 more)
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/: rich_to_textual_guide.md  textual_reactive_guide.md  textual_troubleshooting.md  thothspinner_rich.md  thothspinner_textual.md  troubleshooting.md
docs/components/: spinner.md
docs/examples/: README.md  TEXTUAL_README.md
examples/: combined_demo.py  combined_with_message.py  demo_for_gif.py  message_demo.py  message_shimmer_demo.py  message_states_demo.py  message_word_control.py  message_words_demo.py  progress_demo.py  textual_hint_demo.py  textual_message_demo.py  textual_orchestrator_demo.py  textual_progress_demo.py  textual_reactive_demo.py  textual_spinner_demo.py  textual_timer_demo.py  thothspinner_basic.py  thothspinner_config.py  thothspinner_events.py  thothspinner_fade.py  thothspinner_full.py  thothspinner_states.py  timer_demo.py
examples/rich/: hint_demo.py  spinner_demo.py
planning/: Custom Rich Progress Bar Guide.md  I01.md  I02.md  I03.md  I04.md  I05.md  I06.md  I07.md  M01.md  M02.md  M03.md  M04.md  M05.md  M06.md  M07.md  M08.md  M09.md  M10.md  M11.md  M12.md  M14.md  prd_v1.md  rcc01.md
scripts/: release.sh
src/thothspinner/: __browse__.py  __init__.py  __main__.py
src/thothspinner/core/: __init__.py  color.py  states.py
src/thothspinner/rich/: __init__.py  context.py  thothspinner.py
src/thothspinner/rich/components/: __init__.py  base.py  hint.py  message.py  progress.py  spinner.py  state.py  timer.py
src/thothspinner/rich/spinners/: __init__.py  frames.py
src/thothspinner/textual/: __init__.py
src/thothspinner/textual/widgets/: __init__.py  hint.py  message.py  progress.py  spinner.py  thothspinner.py  timer.py
tests/: conftest.py  test_browse.py  test_cli.py  test_progress_component.py  test_thothspinner.py  test_timer_component.py
tests/rich/: test_frames.py  test_hint.py  test_spinner.py  test_spinner_integration.py  test_track_context.py
tests/rich/components/: test_message.py  test_progress.py  test_spinner_validation.py  test_timer.py
tests/textual/: __init__.py  test_hint.py  test_message.py  test_progress.py  test_snapshots.py  test_spinner.py  test_thothspinner.py  test_timer.py
