[project]
name = "thothspinner"
version = "1.0.0"
description = "A highly configurable progress indicator library for Python with Rich and Textual support"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Steve Morin", email = "steve.morin@gmail.com" }
]
requires-python = ">=3.11"
keywords = [
    "spinner", "progress", "terminal", "cli", "rich", "textual",
    "animation", "loading", "progress-bar", "tui",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "rich>=13",
    "textual>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/smorin/thothspinner"
Repository = "https://github.com/smorin/thothspinner"
Documentation = "https://github.com/smorin/thothspinner/blob/main/docs/thothspinner_rich.md"
Changelog = "https://github.com/smorin/thothspinner/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/smorin/thothspinner/issues"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/thothspinner --cov-report=term-missing --cov-report=html --cov-fail-under=90"

# UV scripts support is not yet available in this version
# Use just commands instead: just example-hint
